--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ env:
   BUILD: |
     docker pull $(grep -ioP '(?<=^from)\s+\S+' Dockerfile) || true
     docker pull docker.io/commaai/openpilot-apks:latest || true
-    docker build --cache-from docker.io/commaai/openpilot-apks:latest -t apks -f Dockerfile .
+    #docker build --cache-from docker.io/commaai/openpilot-apks:latest -t apks -f Dockerfile .
 
 jobs:
   docker_push:
@@ -31,7 +31,7 @@ jobs:
       - name: Build Docker image
         run: eval "$BUILD"
       - name: Build offroad apk
-        run: docker run --name apks apks /bin/sh -c "cd offroad && ./build.sh"
+        run: docker run --name apks docker.io/commaai/openpilot-apks /bin/sh -c "cd offroad && ./build.sh"
       - name: Copy artifacts
         run: docker cp apks:/tmp/openpilot/apks/offroad/ai.comma.plus.offroad.apk ai.comma.plus.offroad.apk
       - uses: actions/upload-artifact@v2
